[metadata]
name = hermescloud
version = 0.0.4
author = Tristan Simpson
author_email = heytristaann@gmail.com
description = Extremely fast full-text-search algorithm and caching system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/realTristan/Hermes
project_urls =
    Bug Tracker = https://github.com/realTristan/Hermes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

# python3 -m pip install --upgrade build
# python3 -m pip install --upgrade twine
# python3 -m build
# python3 -m twine upload dist/*